tests/ui/hygiene/impl_items.stderr
error: type `for<'a> fn(&'a foo::S) {foo::S::f}` is private
  --> $DIR/impl_items.rs:10:23
   |
LL | /     pub macro m() {
LL | |         let _: () = S.f();
   | |                       ^ private type
LL | |     }
   | |_____- in this expansion of `foo::m!`
...
LL |       foo::m!();
   |       --------- in this macro invocation

error: aborting due to previous error

